--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "Lambda School",
   "dependencies": {
     "express": "^4.17.1",
-    "helmet": "^3.18.0"
+    "helmet": "^3.18.0",
+    "knex": "^0.21.1"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
